tests/suite/snapshots/suite__case_rzp5.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: MappingValue
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: Separator
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: DoubleQuote
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: DoubleQuoted
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 10
- token: ScalarSpace
  start:
    line: 0
    column: 10
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: DoubleQuoted
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 8
- token: DoubleQuote
  start:
    line: 1
    column: 8
  end:
    line: 1
    column: 9
- token: Separator
  start:
    line: 1
    column: 9
  end:
    line: 1
    column: 10
- token: Comment
  start:
    line: 1
    column: 10
  end:
    line: 1
    column: 11
- token: CommentText
  start:
    line: 1
    column: 11
  end:
    line: 1
    column: 16
- token: Break
  start:
    line: 1
    column: 16
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Scalar
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: MappingValue
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: Separator
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: Scalar
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 8
- token: ScalarSpace
  start:
    line: 2
    column: 8
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Scalar
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 6
- token: Separator
  start:
    line: 3
    column: 6
  end:
    line: 3
    column: 8
- token: Comment
  start:
    line: 3
    column: 8
  end:
    line: 3
    column: 9
- token: CommentText
  start:
    line: 3
    column: 9
  end:
    line: 3
    column: 14
- token: Break
  start:
    line: 3
    column: 14
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: Scalar
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Separator
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 3
- token: MappingValue
  start:
    line: 4
    column: 3
  end:
    line: 4
    column: 4
- token: Separator
  start:
    line: 4
    column: 4
  end:
    line: 4
    column: 5
- token: Comment
  start:
    line: 4
    column: 5
  end:
    line: 4
    column: 6
- token: CommentText
  start:
    line: 4
    column: 6
  end:
    line: 4
    column: 10
- token: Break
  start:
    line: 4
    column: 10
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 1
- token: Separator
  start:
    line: 5
    column: 1
  end:
    line: 5
    column: 2
- token: Scalar
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 3
- token: Break
  start:
    line: 5
    column: 3
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: MappingKey
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 1
- token: Separator
  start:
    line: 6
    column: 1
  end:
    line: 6
    column: 2
- token: Comment
  start:
    line: 6
    column: 2
  end:
    line: 6
    column: 3
- token: CommentText
  start:
    line: 6
    column: 3
  end:
    line: 6
    column: 8
- token: Break
  start:
    line: 6
    column: 8
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 1
- token: SequenceEntry
  start:
    line: 7
    column: 1
  end:
    line: 7
    column: 2
- token: Separator
  start:
    line: 7
    column: 2
  end:
    line: 7
    column: 3
- token: Scalar
  start:
    line: 7
    column: 3
  end:
    line: 7
    column: 7
- token: Break
  start:
    line: 7
    column: 7
  end:
    line: 8
    column: 0
- token: Indent
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 0
- token: MappingValue
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 1
- token: Separator
  start:
    line: 8
    column: 1
  end:
    line: 8
    column: 2
- token: Comment
  start:
    line: 8
    column: 2
  end:
    line: 8
    column: 3
- token: CommentText
  start:
    line: 8
    column: 3
  end:
    line: 8
    column: 8
- token: Break
  start:
    line: 8
    column: 8
  end:
    line: 9
    column: 0
- token: Indent
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 1
- token: SequenceEntry
  start:
    line: 9
    column: 1
  end:
    line: 9
    column: 2
- token: Separator
  start:
    line: 9
    column: 2
  end:
    line: 9
    column: 3
- token: Comment
  start:
    line: 9
    column: 3
  end:
    line: 9
    column: 4
- token: CommentText
  start:
    line: 9
    column: 4
  end:
    line: 9
    column: 8
- token: Break
  start:
    line: 9
    column: 8
  end:
    line: 10
    column: 0
- token: Indent
  start:
    line: 10
    column: 0
  end:
    line: 10
    column: 2
- token: Scalar
  start:
    line: 10
    column: 2
  end:
    line: 10
    column: 6
- token: Break
  start:
    line: 10
    column: 6
  end:
    line: 11
    column: 0
- token: Indent
  start:
    line: 11
    column: 0
  end:
    line: 11
    column: 0
- token: Scalar
  start:
    line: 11
    column: 0
  end:
    line: 11
    column: 1
- token: MappingValue
  start:
    line: 11
    column: 1
  end:
    line: 11
    column: 2
- token: Separator
  start:
    line: 11
    column: 2
  end:
    line: 11
    column: 3
- token: Anchor
  start:
    line: 11
    column: 3
  end:
    line: 11
    column: 4
- token: AnchorName
  start:
    line: 11
    column: 4
  end:
    line: 11
    column: 8
- token: Separator
  start:
    line: 11
    column: 8
  end:
    line: 11
    column: 9
- token: Comment
  start:
    line: 11
    column: 9
  end:
    line: 11
    column: 10
- token: CommentText
  start:
    line: 11
    column: 10
  end:
    line: 11
    column: 15
- token: Break
  start:
    line: 11
    column: 15
  end:
    line: 12
    column: 0
- token: Indent
  start:
    line: 12
    column: 0
  end:
    line: 12
    column: 1
- token: SequenceEntry
  start:
    line: 12
    column: 1
  end:
    line: 12
    column: 2
- token: Indent
  start:
    line: 12
    column: 2
  end:
    line: 12
    column: 3
- token: Scalar
  start:
    line: 12
    column: 3
  end:
    line: 12
    column: 4
- token: MappingValue
  start:
    line: 12
    column: 4
  end:
    line: 12
    column: 5
- token: Separator
  start:
    line: 12
    column: 5
  end:
    line: 12
    column: 6
- token: Scalar
  start:
    line: 12
    column: 6
  end:
    line: 12
    column: 7
- token: Break
  start:
    line: 12
    column: 7
  end:
    line: 13
    column: 0
- token: Indent
  start:
    line: 13
    column: 0
  end:
    line: 13
    column: 0
- token: Scalar
  start:
    line: 13
    column: 0
  end:
    line: 13
    column: 5
- token: MappingValue
  start:
    line: 13
    column: 5
  end:
    line: 13
    column: 6
- token: Separator
  start:
    line: 13
    column: 6
  end:
    line: 13
    column: 7
- token: Folded
  start:
    line: 13
    column: 7
  end:
    line: 13
    column: 8
- token: Separator
  start:
    line: 13
    column: 8
  end:
    line: 13
    column: 9
- token: Comment
  start:
    line: 13
    column: 9
  end:
    line: 13
    column: 10
- token: CommentText
  start:
    line: 13
    column: 10
  end:
    line: 13
    column: 15
- token: Break
  start:
    line: 13
    column: 15
  end:
    line: 14
    column: 0
- token: Indent
  start:
    line: 14
    column: 0
  end:
    line: 14
    column: 2
- token: Scalar
  start:
    line: 14
    column: 2
  end:
    line: 14
    column: 7
- token: ScalarBreak
  start:
    line: 14
    column: 7
  end:
    line: 15
    column: 0

