tests/suite/snapshots/suite__case_s3pd.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 9
- token: MappingValue
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 10
- token: Separator
  start:
    line: 0
    column: 10
  end:
    line: 0
    column: 11
- token: Scalar
  start:
    line: 0
    column: 11
  end:
    line: 0
    column: 24
- token: Break
  start:
    line: 0
    column: 24
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Empty
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: MappingValue
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Empty
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: Comment
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: CommentText
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 14
- token: Break
  start:
    line: 1
    column: 14
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: DoubleQuote
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: DoubleQuoted
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 11
- token: DoubleQuote
  start:
    line: 2
    column: 11
  end:
    line: 2
    column: 12
- token: MappingValue
  start:
    line: 2
    column: 12
  end:
    line: 2
    column: 13
- token: Break
  start:
    line: 2
    column: 13
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: SequenceEntry
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Separator
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 2
- token: Scalar
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 7
- token: Break
  start:
    line: 3
    column: 7
  end:
    line: 4
    column: 0

