tests/suite/snapshots/suite__case_s4jq.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Comment
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: CommentText
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 35
    line: 0
    column: 35
- token: Break
  start:
    index: 35
    line: 0
    column: 35
  end:
    index: 37
    line: 1
    column: 0
- token: Indent
  start:
    index: 37
    line: 1
    column: 0
  end:
    index: 37
    line: 1
    column: 0
- token: SequenceEntry
  start:
    index: 37
    line: 1
    column: 0
  end:
    index: 38
    line: 1
    column: 1
- token: Separator
  start:
    index: 38
    line: 1
    column: 1
  end:
    index: 39
    line: 1
    column: 2
- token: DoubleQuote
  start:
    index: 39
    line: 1
    column: 2
  end:
    index: 40
    line: 1
    column: 3
- token: DoubleQuoted
  start:
    index: 40
    line: 1
    column: 3
  end:
    index: 42
    line: 1
    column: 5
- token: DoubleQuote
  start:
    index: 42
    line: 1
    column: 5
  end:
    index: 43
    line: 1
    column: 6
- token: Break
  start:
    index: 43
    line: 1
    column: 6
  end:
    index: 45
    line: 2
    column: 0
- token: Indent
  start:
    index: 45
    line: 2
    column: 0
  end:
    index: 45
    line: 2
    column: 0
- token: SequenceEntry
  start:
    index: 45
    line: 2
    column: 0
  end:
    index: 46
    line: 2
    column: 1
- token: Separator
  start:
    index: 46
    line: 2
    column: 1
  end:
    index: 47
    line: 2
    column: 2
- token: Scalar
  start:
    index: 47
    line: 2
    column: 2
  end:
    index: 49
    line: 2
    column: 4
- token: Break
  start:
    index: 49
    line: 2
    column: 4
  end:
    index: 51
    line: 3
    column: 0
- token: Indent
  start:
    index: 51
    line: 3
    column: 0
  end:
    index: 51
    line: 3
    column: 0
- token: SequenceEntry
  start:
    index: 51
    line: 3
    column: 0
  end:
    index: 52
    line: 3
    column: 1
- token: Separator
  start:
    index: 52
    line: 3
    column: 1
  end:
    index: 53
    line: 3
    column: 2
- token: NonSpecificTag
  start:
    index: 53
    line: 3
    column: 2
  end:
    index: 54
    line: 3
    column: 3
- token: Separator
  start:
    index: 54
    line: 3
    column: 3
  end:
    index: 55
    line: 3
    column: 4
- token: Scalar
  start:
    index: 55
    line: 3
    column: 4
  end:
    index: 57
    line: 3
    column: 6
- token: Break
  start:
    index: 57
    line: 3
    column: 6
  end:
    index: 59
    line: 4
    column: 0

