tests/suite/snapshots/suite__case_s4t7.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: MappingValue
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: Separator
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 5
- token: Scalar
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 8
- token: Break
  start:
    line: 0
    column: 8
  end:
    line: 1
    column: 0
- token: DocumentEnd
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 3
- token: Break
  start:
    line: 1
    column: 3
  end:
    line: 2
    column: 0

