tests/suite/snapshots/suite__case_s7bg.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: Break
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 5
    line: 1
    column: 0
- token: Indent
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 0
- token: SequenceEntry
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 6
    line: 1
    column: 1
- token: Separator
  start:
    index: 6
    line: 1
    column: 1
  end:
    index: 7
    line: 1
    column: 2
- token: Scalar
  start:
    index: 7
    line: 1
    column: 2
  end:
    index: 9
    line: 1
    column: 4
- token: Break
  start:
    index: 9
    line: 1
    column: 4
  end:
    index: 11
    line: 2
    column: 0

